feat: Complete internationalization of ProfilePage and ProfileMenu
- Added comprehensive translation keys for ProfilePage in all 7 languages
- Updated ProfileMenu to default to user's interface language
- Added manual language override with visual indicators
- Replaced Chinese (zh) with Mandarin (zh-cn) and Cantonese (zh-hk)
- Added reset functionality to return to automatic language matching
- Fixed FullChatPage language initialization order
- Enhanced user experience with clear language preference management

--- a/frontend/src/language/ar.json
+++ b/frontend/src/language/ar.json
@@ -91,7 +91,10 @@
     "scrollToBottom": "التمرير إلى الأسفل",
     "copyMessage": "نسخ الرسالة",
     "messageCopied": "تم نسخ الرسالة إلى الحافظة",
-    "welcomeMessage": "أنا هنا لمساعدتك في التنقل في إدارة عملك في أوكلاند. اسألني أي شيء عن التراخيص والتصاريح واللوائح أو موارد الأعمال المحلية."
+    "welcomeMessage": "أنا هنا لمساعدتك في التنقل في إدارة عملك في أوكلاند. اسألني أي شيء عن التراخيص والتصاريح واللوائح أو موارد الأعمال المحلية.",
+    "welcomeTitle": "مرحباً بك في أوكلاند AI! 👋",
+    "businessTypeQuestion": "ما نوع العمل الذي تملكه؟",
+    "inputPlaceholder": "اسألني أي شيء عن عملك في أوكلاند..."
   },
   "businessTypes": {
     "beautySalon": "أملك صالون تجميل",
@@ -217,7 +220,41 @@
     "changePassword": "تغيير كلمة المرور",
     "deleteAccount": "حذف الحساب",
     "profileUpdated": "تم تحديث الملف الشخصي بنجاح",
-    "passwordChanged": "تم تغيير كلمة المرور بنجاح"
+    "passwordChanged": "تم تغيير كلمة المرور بنجاح",
+    "loadingProfile": "جاري تحميل الملف الشخصي...",
+    "pleaseLogin": "يرجى تسجيل الدخول لعرض ملفك الشخصي.",
+    "userProfile": "ملف المستخدم الشخصي",
+    "personalInfoSubtitle": "تفاصيل الاتصال الأساسية والديموغرافية",
+    "businessInfoSubtitle": "تفاصيل الشركة والهيكل",
+    "addressInfo": "معلومات العنوان",
+    "addressInfoSubtitle": "تفاصيل موقع العمل",
+    "financialInfo": "المعلومات المالية",
+    "financialInfoSubtitle": "بيانات الإيرادات السنوية",
+    "accountInfo": "معلومات الحساب",
+    "accountInfoSubtitle": "حالة الحساب والأمان",
+    "backToChat": "العودة إلى الدردشة",
+    "fullName": "الاسم الكامل",
+    "emailAddress": "عنوان البريد الإلكتروني",
+    "phoneNumber": "رقم الهاتف",
+    "age": "العمر",
+    "ethnicity": "العرق",
+    "gender": "الجنس",
+    "businessType": "نوع العمل",
+    "employeeCount": "عدد الموظفين",
+    "yearsInBusiness": "سنوات في العمل",
+    "corporationType": "نوع الشركة",
+    "addressLine1": "سطر العنوان 1",
+    "addressLine2": "سطر العنوان 2",
+    "city": "المدينة",
+    "state": "الولاية",
+    "zipCode": "الرمز البريدي",
+    "annualRevenue2022": "الإيرادات السنوية 2022",
+    "annualRevenue2023": "الإيرادات السنوية 2023",
+    "annualRevenue2024": "الإيرادات السنوية 2024",
+    "adminStatus": "حالة المدير",
+    "emailVerification": "التحقق من البريد الإلكتروني",
+    "lastLogin": "آخر تسجيل دخول",
+    "accountCreated": "تم إنشاء الحساب"
   },
   "settings": {
     "title": "الإعدادات",
