--- a/frontend/src/language/en.json
+++ b/frontend/src/language/en.json
@@ -97,7 +97,10 @@
     "scrollToBottom": "Scroll to bottom",
     "copyMessage": "Copy message",
     "messageCopied": "Message copied to clipboard",
-    "welcomeMessage": "I'm here to help you navigate running your business in Oakland. Ask me anything about licenses, permits, regulations, or local business resources."
+    "welcomeMessage": "I'm here to help you navigate running your business in Oakland. Ask me anything about licenses, permits, regulations, or local business resources.",
+    "welcomeTitle": "Welcome to Oakland AI! 👋",
+    "businessTypeQuestion": "What type of business do you own?",
+    "inputPlaceholder": "Ask me anything about your business in Oakland..."
   },
   "businessTypes": {
     "beautySalon": "I own a beauty salon",
@@ -244,8 +247,42 @@
     "updateProfile": "Update Profile",
     "changePassword": "Change Password",
     "deleteAccount": "Delete Account",
-    "profileUpdated": "Profile updated successfully",
-    "passwordChanged": "Password changed successfully"
+    "profileUpdated": "Profile Updated Successfully",
+    "passwordChanged": "Password Changed Successfully",
+    "loadingProfile": "Loading profile...",
+    "pleaseLogin": "Please log in to view your profile.",
+    "userProfile": "User Profile",
+    "personalInfoSubtitle": "Basic contact and demographic details",
+    "businessInfoSubtitle": "Company details and structure",
+    "addressInfo": "Address Information",
+    "addressInfoSubtitle": "Business location details",
+    "financialInfo": "Financial Information",
+    "financialInfoSubtitle": "Annual revenue data",
+    "accountInfo": "Account Information",
+    "accountInfoSubtitle": "Account status and security",
+    "backToChat": "Back to Chat",
+    "fullName": "Full Name",
+    "emailAddress": "Email Address",
+    "phoneNumber": "Phone Number",
+    "age": "Age",
+    "ethnicity": "Ethnicity",
+    "gender": "Gender",
+    "businessType": "Business Type",
+    "employeeCount": "Employee Count",
+    "yearsInBusiness": "Years in Business",
+    "corporationType": "Corporation Type",
+    "addressLine1": "Address Line 1",
+    "addressLine2": "Address Line 2",
+    "city": "City",
+    "state": "State",
+    "zipCode": "ZIP Code",
+    "annualRevenue2022": "Annual Revenue 2022",
+    "annualRevenue2023": "Annual Revenue 2023",
+    "annualRevenue2024": "Annual Revenue 2024",
+    "adminStatus": "Admin Status",
+    "emailVerification": "Email Verification",
+    "lastLogin": "Last Login",
+    "accountCreated": "Account Created"
   },
   "settings": {
     "title": "Settings",
