--- a/frontend/src/language/es.json
+++ b/frontend/src/language/es.json
@@ -97,7 +97,10 @@
     "scrollToBottom": "Desplazarse hacia abajo",
     "copyMessage": "Copiar mensaje",
     "messageCopied": "Mensaje copiado al portapapeles",
-    "welcomeMessage": "Estoy aquí para ayudarte a navegar por el funcionamiento de tu negocio en Oakland. Pregúntame cualquier cosa sobre licencias, permisos, regulaciones o recursos comerciales locales."
+    "welcomeMessage": "Estoy aquí para ayudarte a navegar por el funcionamiento de tu negocio en Oakland. Pregúntame cualquier cosa sobre licencias, permisos, regulaciones o recursos comerciales locales.",
+    "welcomeTitle": "¡Bienvenido a Oakland AI! 👋",
+    "businessTypeQuestion": "¿Qué tipo de negocio tienes?",
+    "inputPlaceholder": "Pregúntame cualquier cosa sobre tu negocio en Oakland..."
   },
   "businessTypes": {
     "beautySalon": "Tengo un salón de belleza",
@@ -211,19 +214,53 @@
   },
   "profile": {
     "title": "Perfil",
-    "personalInfo": "Información personal",
-    "businessInfo": "Información del negocio",
+    "personalInfo": "Información Personal",
+    "businessInfo": "Información del Negocio",
     "preferences": "Preferencias",
     "security": "Seguridad",
     "notifications": "Notificaciones",
     "language": "Idioma",
     "theme": "Tema",
-    "timezone": "Zona horaria",
-    "updateProfile": "Actualizar perfil",
-    "changePassword": "Cambiar contraseña",
-    "deleteAccount": "Eliminar cuenta",
-    "profileUpdated": "Perfil actualizado exitosamente",
-    "passwordChanged": "Contraseña cambiada exitosamente"
+    "timezone": "Zona Horaria",
+    "updateProfile": "Actualizar Perfil",
+    "changePassword": "Cambiar Contraseña",
+    "deleteAccount": "Eliminar Cuenta",
+    "profileUpdated": "Perfil Actualizado Exitosamente",
+    "passwordChanged": "Contraseña Cambiada Exitosamente",
+    "loadingProfile": "Cargando perfil...",
+    "pleaseLogin": "Por favor inicie sesión para ver su perfil.",
+    "userProfile": "Perfil de Usuario",
+    "personalInfoSubtitle": "Detalles básicos de contacto y demográficos",
+    "businessInfoSubtitle": "Detalles de la empresa y estructura",
+    "addressInfo": "Información de Dirección",
+    "addressInfoSubtitle": "Detalles de ubicación del negocio",
+    "financialInfo": "Información Financiera",
+    "financialInfoSubtitle": "Datos de ingresos anuales",
+    "accountInfo": "Información de la Cuenta",
+    "accountInfoSubtitle": "Estado de la cuenta y seguridad",
+    "backToChat": "Volver al Chat",
+    "fullName": "Nombre Completo",
+    "emailAddress": "Dirección de Correo",
+    "phoneNumber": "Número de Teléfono",
+    "age": "Edad",
+    "ethnicity": "Etnia",
+    "gender": "Género",
+    "businessType": "Tipo de Negocio",
+    "employeeCount": "Número de Empleados",
+    "yearsInBusiness": "Años en el Negocio",
+    "corporationType": "Tipo de Corporación",
+    "addressLine1": "Línea de Dirección 1",
+    "addressLine2": "Línea de Dirección 2",
+    "city": "Ciudad",
+    "state": "Estado",
+    "zipCode": "Código Postal",
+    "annualRevenue2022": "Ingresos Anuales 2022",
+    "annualRevenue2023": "Ingresos Anuales 2023",
+    "annualRevenue2024": "Ingresos Anuales 2024",
+    "adminStatus": "Estado de Administrador",
+    "emailVerification": "Verificación de Correo",
+    "lastLogin": "Último Inicio de Sesión",
+    "accountCreated": "Cuenta Creada"
   },
   "settings": {
     "title": "Configuración",
