--- a/frontend/src/language/prs.json
+++ b/frontend/src/language/prs.json
@@ -97,7 +97,10 @@
     "scrollToBottom": "اسکرول به پایین",
     "copyMessage": "کپی کردن پیام",
     "messageCopied": "پیام در کلیپ‌بورد کپی شد",
-    "welcomeMessage": "من اینجا هستم تا به شما در مدیریت کسب‌وکارتان در اوکلند کمک کنم. هر سوالی در مورد مجوزها، جوازها، مقررات یا منابع کسب‌وکار محلی از من بپرسید."
+    "welcomeMessage": "من اینجا هستم تا به شما در مدیریت کسب‌وکارتان در اوکلند کمک کنم. هر سوالی در مورد مجوزها، جوازها، مقررات یا منابع کسب‌وکار محلی از من بپرسید.",
+    "welcomeTitle": "خوش آمدید به اوکلند AI! 👋",
+    "businessTypeQuestion": "چه نوع کسب‌وکاری دارید؟",
+    "inputPlaceholder": "هر سوالی در مورد کسب‌وکارتان در اوکلند از من بپرسید..."
   },
   "businessTypes": {
     "beautySalon": "من یک سالن زیبایی دارم",
@@ -235,7 +238,7 @@
     "title": "پروفایل",
     "personalInfo": "اطلاعات شخصی",
     "businessInfo": "اطلاعات کسب‌وکار",
-    "preferences": "ترجیحات",
+    "preferences": "تنظیمات",
     "security": "امنیت",
     "notifications": "اعلان‌ها",
     "language": "زبان",
@@ -243,9 +246,43 @@
     "timezone": "منطقه زمانی",
     "updateProfile": "به‌روزرسانی پروفایل",
     "changePassword": "تغییر رمز عبور",
-    "deleteAccount": "حذف حساب",
+    "deleteAccount": "حذف حساب کاربری",
     "profileUpdated": "پروفایل با موفقیت به‌روزرسانی شد",
-    "passwordChanged": "رمز عبور با موفقیت تغییر یافت"
+    "passwordChanged": "رمز عبور با موفقیت تغییر یافت",
+    "loadingProfile": "در حال بارگذاری پروفایل...",
+    "pleaseLogin": "لطفاً برای مشاهده پروفایل خود وارد شوید.",
+    "userProfile": "پروفایل کاربر",
+    "personalInfoSubtitle": "جزئیات تماس پایه و جمعیت‌شناسی",
+    "businessInfoSubtitle": "جزئیات شرکت و ساختار",
+    "addressInfo": "اطلاعات آدرس",
+    "addressInfoSubtitle": "جزئیات موقعیت کسب‌وکار",
+    "financialInfo": "اطلاعات مالی",
+    "financialInfoSubtitle": "داده‌های درآمد سالانه",
+    "accountInfo": "اطلاعات حساب کاربری",
+    "accountInfoSubtitle": "وضعیت حساب کاربری و امنیت",
+    "backToChat": "بازگشت به چت",
+    "fullName": "نام کامل",
+    "emailAddress": "آدرس ایمیل",
+    "phoneNumber": "شماره تلفن",
+    "age": "سن",
+    "ethnicity": "قومیت",
+    "gender": "جنسیت",
+    "businessType": "نوع کسب‌وکار",
+    "employeeCount": "تعداد کارمندان",
+    "yearsInBusiness": "سال‌های فعالیت",
+    "corporationType": "نوع شرکت",
+    "addressLine1": "خط آدرس 1",
+    "addressLine2": "خط آدرس 2",
+    "city": "شهر",
+    "state": "ایالت",
+    "zipCode": "کد پستی",
+    "annualRevenue2022": "درآمد سالانه 2022",
+    "annualRevenue2023": "درآمد سالانه 2023",
+    "annualRevenue2024": "درآمد سالانه 2024",
+    "adminStatus": "وضعیت مدیر",
+    "emailVerification": "تأیید ایمیل",
+    "lastLogin": "آخرین ورود",
+    "accountCreated": "حساب کاربری ایجاد شد"
   },
   "settings": {
     "title": "تنظیمات",
