--- a/frontend/src/language/vi.json
+++ b/frontend/src/language/vi.json
@@ -97,7 +97,10 @@
     "scrollToBottom": "Cuộn xuống dưới",
     "copyMessage": "Sao chép tin nhắn",
     "messageCopied": "Đã sao chép tin nhắn vào bộ nhớ tạm",
-    "welcomeMessage": "Tôi ở đây để giúp bạn điều hướng việc điều hành doanh nghiệp tại Oakland. Hãy hỏi tôi bất cứ điều gì về giấy phép, giấy tờ, quy định hoặc tài nguyên kinh doanh địa phương."
+    "welcomeMessage": "Tôi ở đây để giúp bạn điều hướng việc điều hành doanh nghiệp tại Oakland. Hãy hỏi tôi bất cứ điều gì về giấy phép, giấy tờ, quy định hoặc tài nguyên kinh doanh địa phương.",
+    "welcomeTitle": "Chào mừng đến với Oakland AI! 👋",
+    "businessTypeQuestion": "Bạn sở hữu loại hình kinh doanh gì?",
+    "inputPlaceholder": "Hãy hỏi tôi bất cứ điều gì về doanh nghiệp của bạn tại Oakland..."
   },
   "businessTypes": {
     "beautySalon": "Tôi có một salon làm đẹp",
@@ -211,19 +214,53 @@
   },
   "profile": {
     "title": "Hồ sơ",
-    "personalInfo": "Thông tin cá nhân",
-    "businessInfo": "Thông tin doanh nghiệp",
+    "personalInfo": "Thông tin Cá nhân",
+    "businessInfo": "Thông tin Doanh nghiệp",
     "preferences": "Tùy chọn",
     "security": "Bảo mật",
     "notifications": "Thông báo",
     "language": "Ngôn ngữ",
-    "theme": "Giao diện",
+    "theme": "Chủ đề",
     "timezone": "Múi giờ",
-    "updateProfile": "Cập nhật hồ sơ",
-    "changePassword": "Đổi mật khẩu",
-    "deleteAccount": "Xóa tài khoản",
-    "profileUpdated": "Hồ sơ đã được cập nhật thành công",
-    "passwordChanged": "Mật khẩu đã được thay đổi thành công"
+    "updateProfile": "Cập nhật Hồ sơ",
+    "changePassword": "Thay đổi Mật khẩu",
+    "deleteAccount": "Xóa Tài khoản",
+    "profileUpdated": "Hồ sơ được Cập nhật Thành công",
+    "passwordChanged": "Mật khẩu được Thay đổi Thành công",
+    "loadingProfile": "Đang tải hồ sơ...",
+    "pleaseLogin": "Vui lòng đăng nhập để xem hồ sơ của bạn.",
+    "userProfile": "Hồ sơ Người dùng",
+    "personalInfoSubtitle": "Thông tin liên lạc cơ bản và chi tiết nhân khẩu học",
+    "businessInfoSubtitle": "Chi tiết công ty và cấu trúc",
+    "addressInfo": "Thông tin Địa chỉ",
+    "addressInfoSubtitle": "Chi tiết vị trí doanh nghiệp",
+    "financialInfo": "Thông tin Tài chính",
+    "financialInfoSubtitle": "Dữ liệu doanh thu hàng năm",
+    "accountInfo": "Thông tin Tài khoản",
+    "accountInfoSubtitle": "Trạng thái tài khoản và bảo mật",
+    "backToChat": "Quay lại Chat",
+    "fullName": "Họ và Tên",
+    "emailAddress": "Địa chỉ Email",
+    "phoneNumber": "Số Điện thoại",
+    "age": "Tuổi",
+    "ethnicity": "Dân tộc",
+    "gender": "Giới tính",
+    "businessType": "Loại hình Doanh nghiệp",
+    "employeeCount": "Số lượng Nhân viên",
+    "yearsInBusiness": "Số năm Kinh doanh",
+    "corporationType": "Loại hình Công ty",
+    "addressLine1": "Dòng Địa chỉ 1",
+    "addressLine2": "Dòng Địa chỉ 2",
+    "city": "Thành phố",
+    "state": "Tiểu bang",
+    "zipCode": "Mã Bưu điện",
+    "annualRevenue2022": "Doanh thu Hàng năm 2022",
+    "annualRevenue2023": "Doanh thu Hàng năm 2023",
+    "annualRevenue2024": "Doanh thu Hàng năm 2024",
+    "adminStatus": "Trạng thái Quản trị viên",
+    "emailVerification": "Xác minh Email",
+    "lastLogin": "Đăng nhập Cuối cùng",
+    "accountCreated": "Tài khoản được Tạo"
   },
   "settings": {
     "title": "Cài đặt",
