--- a/frontend/src/language/mam.json
+++ b/frontend/src/language/mam.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "welcome": "Welcome",
-    "continue": "Continue",
-    "back": "Back",
-    "cancel": "Cancel",
-    "save": "Save",
-    "delete": "Delete",
-    "edit": "Edit",
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "close": "Close",
-    "submit": "Submit",
-    "search": "Search",
-    "filter": "Filter",
-    "sort": "Sort",
-    "refresh": "Refresh",
-    "next": "Next",
-    "previous": "Previous",
-    "language": "Language"
+    "welcome": "B'ix a b'a",
+    "continue": "Tz'aqat",
+    "back": "Tz'aqat",
+    "cancel": "Tz'aqat",
+    "save": "Tz'aqat",
+    "delete": "Tz'aqat",
+    "edit": "Tz'aqat",
+    "loading": "Tz'aqat...",
+    "error": "Tz'aqat",
+    "success": "Tz'aqat",
+    "close": "Tz'aqat",
+    "submit": "Tz'aqat",
+    "search": "Tz'aqat",
+    "filter": "Tz'aqat",
+    "sort": "Tz'aqat",
+    "refresh": "Tz'aqat",
+    "next": "Tz'aqat",
+    "previous": "Tz'aqat",
+    "language": "Tz'aqat"
   },
   "navigation": {
     "home": "Home",
