Fix authentication flow and routing issues
- Fix login page translation keys for email field and placeholder
- Add missing translation keys (email, emailPlaceholder, loggingIn) to all language files
- Fix login navigation to properly redirect to /fullchat after authentication
- Remove invalid Node.js import from FullChatPage that was causing crashes
- Fix 404 error in saveMessageToDatabase by using correct API URL
- Remove 'Clear History' button from chat page
- Modify 'New Chat' button to clear visible chat while preserving database logs
- Fix business type switching to ensure OpenAI receives correct business context
- Add authentication check to ProfessionalLanguagePage to redirect authenticated users
- Fix ProtectedRoute to properly handle authentication state
- Add comprehensive debugging logs throughout authentication flow
- Ensure chat history is preserved in database for OpenAI context

--- a/frontend/src/language/en.json
+++ b/frontend/src/language/en.json
@@ -60,8 +60,10 @@
     "noAccount": "Don't have an account?",
     "signInToAccess": "Sign in to access your Oakland AI assistant",
     "usernamePlaceholder": "Enter your username",
+    "emailPlaceholder": "Enter your email address",
     "passwordPlaceholder": "Enter your password",
-    "signingIn": "Signing In..."
+    "signingIn": "Signing In...",
+    "loggingIn": "Logging In..."
   },
   "languageSelection": {
     "title": "Choose Your Language",
