Update Vietnamese language to South Vietnamese dialect
- Changed 'Tôi' to 'Tui' throughout the file
- Updated formal language to more casual South Vietnamese tone
- Added 'nha', 'rồi', 'vô' particles for authentic South Vietnamese feel
- Changed 'Vui lòng' to more casual expressions
- Updated error messages and validation text to sound more friendly
- Made business type descriptions more conversational
- Updated chat interface to use South Vietnamese expressions

--- a/frontend/src/language/vi.json
+++ b/frontend/src/language/vi.json
@@ -40,28 +40,28 @@
     "firstName": "Tên",
     "lastName": "Họ",
     "phone": "Số điện thoại",
-    "forgotPassword": "Quên mật khẩu?",
+    "forgotPassword": "Quên mật khẩu rồi?",
     "resetPassword": "Đặt lại mật khẩu",
     "signIn": "Đăng nhập",
     "signUp": "Đăng ký",
     "signOut": "Đăng xuất",
-    "rememberMe": "Ghi nhớ tôi",
+    "rememberMe": "Nhớ tui nha",
     "welcome": "Chào mừng",
-    "loginSuccess": "Đăng nhập thành công",
-    "loginError": "Đăng nhập thất bại. Vui lòng thử lại.",
-    "registerSuccess": "Đăng ký thành công",
-    "registerError": "Đăng ký thất bại. Vui lòng thử lại.",
-    "passwordResetSent": "Email đặt lại mật khẩu đã được gửi",
-    "passwordResetError": "Không thể gửi email đặt lại mật khẩu",
-    "emailVerificationSent": "Email xác minh đã được gửi",
-    "emailVerificationError": "Không thể gửi email xác minh",
-    "accountVerified": "Tài khoản đã được xác minh thành công",
-    "verificationError": "Xác minh thất bại",
-    "noAccount": "Chưa có tài khoản?",
-    "signInToAccess": "Đăng nhập để truy cập trợ lý trí tuệ nhân tạo Oakland của bạn",
-    "usernamePlaceholder": "Nhập tên đăng nhập của bạn",
-    "emailPlaceholder": "Nhập địa chỉ email của bạn",
-    "passwordPlaceholder": "Nhập mật khẩu của bạn",
+    "loginSuccess": "Đăng nhập thành công rồi",
+    "loginError": "Đăng nhập không được. Thử lại nha.",
+    "registerSuccess": "Đăng ký thành công rồi",
+    "registerError": "Đăng ký không được. Thử lại nha.",
+    "passwordResetSent": "Email đặt lại mật khẩu đã gửi rồi",
+    "passwordResetError": "Không gửi được email đặt lại mật khẩu",
+    "emailVerificationSent": "Email xác minh đã gửi rồi",
+    "emailVerificationError": "Không gửi được email xác minh",
+    "accountVerified": "Tài khoản đã xác minh thành công rồi",
+    "verificationError": "Xác minh không được",
+    "noAccount": "Chưa có tài khoản hả?",
+    "signInToAccess": "Đăng nhập để dùng trợ lý AI Oakland của bạn nha",
+    "usernamePlaceholder": "Nhập tên đăng nhập của bạn vô",
+    "emailPlaceholder": "Nhập địa chỉ email của bạn vô",
+    "passwordPlaceholder": "Nhập mật khẩu của bạn vô",
     "signingIn": "Đang đăng nhập...",
     "loggingIn": "Đang đăng nhập..."
   },
@@ -83,7 +83,7 @@
   "chat": {
     "title": "Trợ lý AI Oakland",
     "subtitle": "Hỗ trợ thông minh cho doanh nghiệp nhỏ tại Oakland",
-    "placeholder": "Nhập tin nhắn của bạn tại đây...",
+    "placeholder": "Nhập tin nhắn của bạn vô đây...",
     "send": "Gửi",
     "voiceInput": "Nhập giọng nói",
     "voiceOutput": "Xuất giọng nói",
@@ -92,61 +92,61 @@
     "clearChat": "Xóa chat",
     "exportChat": "Xuất chat",
     "chatHistory": "Lịch sử chat",
-    "noMessages": "Chưa có tin nhắn nào. Hãy bắt đầu cuộc trò chuyện!",
-    "messageError": "Gửi tin nhắn thất bại. Vui lòng thử lại.",
+    "noMessages": "Chưa có tin nhắn nào. Bắt đầu trò chuyện đi!",
+    "messageError": "Gửi tin nhắn không được. Thử lại nha.",
     "aiThinking": "AI đang suy nghĩ...",
     "aiResponding": "AI đang trả lời...",
     "scrollToBottom": "Cuộn xuống dưới",
     "copyMessage": "Sao chép tin nhắn",
-    "messageCopied": "Đã sao chép tin nhắn vào bộ nhớ tạm",
-    "welcomeMessage": "Tôi ở đây để giúp bạn điều hướng việc điều hành doanh nghiệp tại Oakland. Hãy hỏi tôi bất cứ điều gì về giấy phép, giấy tờ, quy định hoặc tài nguyên kinh doanh địa phương.",
+    "messageCopied": "Đã sao chép tin nhắn vào bộ nhớ tạm rồi",
+    "welcomeMessage": "Tui ở đây để giúp bạn điều hướng việc điều hành doanh nghiệp tại Oakland. Hỏi tui bất cứ điều gì về giấy phép, giấy tờ, quy định hoặc tài nguyên kinh doanh địa phương nha.",
     "welcomeTitle": "Chào mừng đến với Oakland AI! 👋",
-    "businessTypeQuestion": "Bạn sở hữu loại hình kinh doanh gì?",
-    "inputPlaceholder": "Hãy hỏi tôi bất cứ điều gì về doanh nghiệp của bạn tại Oakland..."
+    "businessTypeQuestion": "Bạn có loại hình kinh doanh gì vậy?",
+    "inputPlaceholder": "Hỏi tui bất cứ điều gì về doanh nghiệp của bạn tại Oakland..."
   },
   "businessTypes": {
-    "beautySalon": "Tôi có một salon làm đẹp",
-    "restaurant": "Tôi có một nhà hàng",
-    "retailStore": "Tôi có một cửa hàng bán lẻ",
-    "coffeeShop": "Tôi có một quán cà phê",
-    "barbershop": "Tôi có một tiệm cắt tóc",
-    "bakery": "Tôi có một tiệm bánh",
-    "gym": "Tôi có một phòng tập gym",
-    "autoRepair": "Tôi có một tiệm sửa xe",
-    "laundry": "Tôi có một dịch vụ giặt ủi",
-    "petGrooming": "Tôi có một doanh nghiệp chăm sóc thú cưng",
-    "tattooParlor": "Tôi có một studio xăm hình",
-    "nailSalon": "Tôi có một salon làm móng",
-    "photographyStudio": "Tôi có một studio chụp ảnh",
-    "consulting": "Tôi có một doanh nghiệp tư vấn",
-    "daycare": "Tôi có một trung tâm chăm sóc trẻ em",
-    "cleaningService": "Tôi có một dịch vụ dọn dẹp",
-    "foodTruck": "Tôi có một xe bán thức ăn",
-    "yogaStudio": "Tôi có một studio yoga",
-    "musicSchool": "Tôi có một trường âm nhạc",
-    "danceStudio": "Tôi có một studio nhảy múa",
-    "artGallery": "Tôi có một phòng trưng bày nghệ thuật",
-    "bookstore": "Tôi có một hiệu sách",
-    "florist": "Tôi có một tiệm hoa",
-    "jewelryStore": "Tôi có một tiệm trang sức",
-    "vintageShop": "Tôi có một cửa hàng vintage",
-    "techStartup": "Tôi có một startup công nghệ",
-    "dentalOffice": "Tôi có một phòng khám nha khoa",
-    "lawFirm": "Tôi có một công ty luật",
-    "realEstate": "Tôi có một doanh nghiệp bất động sản",
-    "insuranceAgency": "Tôi có một đại lý bảo hiểm",
-    "accountingFirm": "Tôi có một công ty kế toán",
-    "marketingAgency": "Tôi có một đại lý marketing",
-    "webDesign": "Tôi có một doanh nghiệp thiết kế web",
-    "construction": "Tôi có một doanh nghiệp xây dựng",
-    "landscaping": "Tôi có một doanh nghiệp cảnh quan",
-    "plumbing": "Tôi có một doanh nghiệp ống nước",
-    "electrical": "Tôi có một doanh nghiệp điện",
-    "hvac": "Tôi có một doanh nghiệp HVAC",
-    "roofing": "Tôi có một doanh nghiệp lợp mái",
-    "painting": "Tôi có một doanh nghiệp sơn",
-    "carpentry": "Tôi có một doanh nghiệp mộc",
-    "other": "Tôi có một loại doanh nghiệp khác"
+    "beautySalon": "Tui có một salon làm đẹp",
+    "restaurant": "Tui có một nhà hàng",
+    "retailStore": "Tui có một cửa hàng bán lẻ",
+    "coffeeShop": "Tui có một quán cà phê",
+    "barbershop": "Tui có một tiệm cắt tóc",
+    "bakery": "Tui có một tiệm bánh",
+    "gym": "Tui có một phòng tập gym",
+    "autoRepair": "Tui có một tiệm sửa xe",
+    "laundry": "Tui có một dịch vụ giặt ủi",
+    "petGrooming": "Tui có một doanh nghiệp chăm sóc thú cưng",
+    "tattooParlor": "Tui có một studio xăm hình",
+    "nailSalon": "Tui có một salon làm móng",
+    "photographyStudio": "Tui có một studio chụp ảnh",
+    "consulting": "Tui có một doanh nghiệp tư vấn",
+    "daycare": "Tui có một trung tâm chăm sóc trẻ em",
+    "cleaningService": "Tui có một dịch vụ dọn dẹp",
+    "foodTruck": "Tui có một xe bán thức ăn",
+    "yogaStudio": "Tui có một studio yoga",
+    "musicSchool": "Tui có một trường âm nhạc",
+    "danceStudio": "Tui có một studio nhảy múa",
+    "artGallery": "Tui có một phòng trưng bày nghệ thuật",
+    "bookstore": "Tui có một hiệu sách",
+    "florist": "Tui có một tiệm hoa",
+    "jewelryStore": "Tui có một tiệm trang sức",
+    "vintageShop": "Tui có một cửa hàng vintage",
+    "techStartup": "Tui có một startup công nghệ",
+    "dentalOffice": "Tui có một phòng khám nha khoa",
+    "lawFirm": "Tui có một công ty luật",
+    "realEstate": "Tui có một doanh nghiệp bất động sản",
+    "insuranceAgency": "Tui có một đại lý bảo hiểm",
+    "accountingFirm": "Tui có một công ty kế toán",
+    "marketingAgency": "Tui có một đại lý marketing",
+    "webDesign": "Tui có một doanh nghiệp thiết kế web",
+    "construction": "Tui có một doanh nghiệp xây dựng",
+    "landscaping": "Tui có một doanh nghiệp cảnh quan",
+    "plumbing": "Tui có một doanh nghiệp ống nước",
+    "electrical": "Tui có một doanh nghiệp điện",
+    "hvac": "Tui có một doanh nghiệp HVAC",
+    "roofing": "Tui có một doanh nghiệp lợp mái",
+    "painting": "Tui có một doanh nghiệp sơn",
+    "carpentry": "Tui có một doanh nghiệp mộc",
+    "other": "Tui có một loại doanh nghiệp khác"
   },
   "quickOptions": {
     "businessLicense": "Giấy phép kinh doanh",
@@ -227,10 +227,10 @@
     "updateProfile": "Cập nhật Hồ sơ",
     "changePassword": "Thay đổi Mật khẩu",
     "deleteAccount": "Xóa Tài khoản",
-    "profileUpdated": "Hồ sơ được Cập nhật Thành công",
-    "passwordChanged": "Mật khẩu được Thay đổi Thành công",
+    "profileUpdated": "Hồ sơ được Cập nhật Thành công rồi",
+    "passwordChanged": "Mật khẩu được Thay đổi Thành công rồi",
     "loadingProfile": "Đang tải hồ sơ...",
-    "pleaseLogin": "Vui lòng đăng nhập để xem hồ sơ của bạn.",
+    "pleaseLogin": "Đăng nhập để xem hồ sơ của bạn nha.",
     "userProfile": "Hồ sơ Người dùng",
     "personalInfoSubtitle": "Thông tin liên lạc cơ bản và chi tiết nhân khẩu học",
     "businessInfoSubtitle": "Chi tiết công ty và cấu trúc",
@@ -285,22 +285,22 @@
     "pushNotifications": "Thông báo đẩy"
   },
   "errors": {
-    "general": "Đã xảy ra lỗi. Vui lòng thử lại.",
-    "network": "Lỗi mạng. Vui lòng kiểm tra kết nối.",
-    "server": "Lỗi máy chủ. Vui lòng thử lại sau.",
+    "general": "Có lỗi xảy ra rồi. Thử lại nha.",
+    "network": "Lỗi mạng. Kiểm tra kết nối nha.",
+    "server": "Lỗi máy chủ. Thử lại sau nha.",
     "notFound": "Không tìm thấy trang.",
     "unauthorized": "Bạn không được phép truy cập trang này.",
     "forbidden": "Truy cập bị cấm.",
-    "validation": "Vui lòng kiểm tra thông tin nhập và thử lại.",
-    "timeout": "Yêu cầu hết thời gian. Vui lòng thử lại.",
-    "unknown": "Đã xảy ra lỗi không xác định."
+    "validation": "Kiểm tra thông tin nhập và thử lại nha.",
+    "timeout": "Yêu cầu hết thời gian. Thử lại nha.",
+    "unknown": "Có lỗi không xác định xảy ra."
   },
   "validation": {
-    "required": "Trường này là bắt buộc.",
-    "email": "Vui lòng nhập địa chỉ email hợp lệ.",
+    "required": "Trường này bắt buộc phải có.",
+    "email": "Nhập địa chỉ email hợp lệ nha.",
     "password": "Mật khẩu phải có ít nhất 8 ký tự.",
     "passwordMatch": "Mật khẩu không khớp.",
-    "phone": "Vui lòng nhập số điện thoại hợp lệ.",
+    "phone": "Nhập số điện thoại hợp lệ nha.",
     "minLength": "Phải có ít nhất {{min}} ký tự.",
     "maxLength": "Không được quá {{max}} ký tự.",
     "invalidFormat": "Định dạng không hợp lệ."
